--- a/possys/client/package.json
+++ b/possys/client/package.json
@@ -1,9 +1,10 @@
 {
-  "proxy":"https://localhost:5000",
+  "proxy": "https://localhost:5000",
   "name": "client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -16,7 +17,9 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
+    "react-to-print": "^2.14.15",
     "redux": "^4.2.1",
+    "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
     "web-vitals": "^2.1.0"
   },
